Added lightingcomponent tests and javadocs for all lighting related tests: